# peru-places

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
places/: admin.py  constants.py  loader.py  models.py
places/management/commands/: load_places.py
places/migrations/: 0001_initial.py  0002_load_data_20200203_1625.py  0003_auto_20200213_2229.py  0004_auto_20200213_2236.py  0005_load_data_20200213_2247.py  0006_auto_20200316_2014.py  0007_district_ubigeo.py  0008_data_load_ubigeo_20200402_2107.py  0009_auto_20210216_2312.py
places/migrations/migrations/: 0009_add_is_state_counties.py
places/static/: rptUbigeo.xls
