[metadata]
name = places
version = 0.1
description = A Django app to load districts, provinces and regions of Peru.
long_description = file: README.rst
url = https://bitbucket.org/inkalabsinc/peru-places/src
author = Inka labs
author_email = info@inka-labs.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages = find: